longhorn-system/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
    ingress.kubernetes.io/ssl-redirect: "true"
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  rules:
    - host: longhorn-ui.apps.damp-lab-1081.corvus-ch.xyz
      http:
        paths:
          - backend:
              serviceName: longhorn-frontend
              servicePort: 80

  tls:
  - hosts:
    - longhorn-ui.apps.damp-lab-1081.corvus-ch.xyz
    secretName: longhorn-ingress-cert
